[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Five small console games"
authors = ["Oleg Nikitin <twisty-03-cubic@icloud.com>"]
readme = "README.md"
repository = "https://github.com/LameBaker/python-project-49"
classifier = [
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
	"Intended Audience :: Gamers",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy"
	"Development Status :: 5 - Production/Stable",
	]
packages = [ 
	{ include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
